@@ -53,6 +53,11 @@
     </p>
     <h2>Hinweis</h2>
     <p>
+      Mehr Informationen über die Krypto-Operationen befinden sich im
+      <a href="../HTML/en/kleopatra/index.html">Kleopatra Handbuch</a>
+      (Englisch).
+    </p>
+    <p>
       Mehr Informationen und aktuelle Programmversionen sind auf der 
       <a href="http://www.gpg4win.de">Gpg4win Webpräsenz</a>
       verfügbar.
