@@ -49,6 +49,10 @@
     </p>
     <h2>Reference</h2>
     <p>
+      More information about these crypto operations can be found in
+      the <a href="../HTML/en/kleopatra/index.html">Kleopatra
+      manual</a>.
+
       Please find more information and new software versions at
       the <a href="http://www.gpg4win.org/">Gpg4win website</a>.
     </p>
